2006-05-21  Kohei Yoshida  <kohei.yoshida@gmail.com>

	* idl/org/openoffice/sc/solver/Equality.idl: removed '_THAN_' from two enum 
	elements to make them shorter (and easider to type).

	* idl/org/openoffice/sc/solver/XLpAlgorithm.idl: removed run().

	* idl/org/openoffice/sc/solver/XLpModel.idl: added set/getEquality methods.

	* workben/external/lpsolve_uno/Makefile: renamed TestModel -> LpModel.

	* workben/external/lpsolve_uno/lpsolve_uno.?xx: added code to map model's 
	properties passed via UNO to lp_solve's.  Removed demo() and run();

	* workben/external/lpsolve_uno/testmodel.?xx: renamed to lpmodel_uno.?xx.
	
	* workben/external/lpsolve_uno/TestModel.idl: renamed to LpModel.idl.

2006-05-17  Kohei Yoshida  <kohei.yoshida@gmail.com>

	* source/inc/solver.hxx: changed the service name of the main Solver component to 
	match the rest of the entities under org.openoffice.sc.solver module namespace.
	
	* source/ui/dialog.cxx: (finally) disabled the Options button for now.
	
	* workben/external/lpsolve_uno/*: added LpSolve.idl, TestModel.idl, demo.cxx,
	testmodel.?xx, and removed XLpAlgorithm.idl.  The TestModel service is used only 
	to test lp_solve connectivity via UNO framework.
	
	* workben/external/lpsolve_uno/Makefile: quite a bit of reorganization.
	
	* workben/external/lpsolve_uno/lpsolve_uno.?xx: added new methods and a structure
	to hold private data members.
	
	* idl/org/openoffice/sc/solver/*.idl: added new IDL files (Bound.idl, Equality.idl,
        Goal.idl, XLpAlgorithm.idl and XLpModel.idl).

2006-05-05  Kohei Yoshida  <kohei.yoshida@gmail.com>

	* workben/external/lpsolve_uno/*: initial upload of source files for exporting
	lp_solve library as UNO service.  Note that the source files of lp_solve library
	are not included.

2006-04-27  Michael Meeks  <michael.meeks@novell.com>

	* source/ui/scsolver.hrc, source/ui/scsolver.src: add
	dummy strings for translation.
	
	* prj/d.lst, source/ui/makefile.mk, util/makefile.mk: