@@ -36,7 +36,25 @@ module org { module openoffice { module sc { module solver
 	
 	interface XLpAlgorithm : com::sun::star::uno::XInterface
 	{
+		/**
+		 * Solve a current model for an optimized solution.
+		 */
 		void solve();
+
+		/** 
+		 * Retrieve a decision variable by a given column ID.
+		 * 
+		 * @param id column ID
+		 */
+		double getVar( [in] long id );
+
+		/**
+		 * Retrieve a sequence of all decision variables.
+		 * 
+		 * @return sequence<double> a sequence containing all decision
+		 *         variables.
+		 */
+		sequence<double> getVars();
 		
 		[attribute] org::openoffice::sc::solver::XLpModel Model;
 	};
