@@ -1,3 +1,10 @@
+2006-05-22  Kohei Yoshida  <kohei.yoshida@gmail.com>
+
+	* idl/org/openoffice/sc/solver/XLpAlgorithm.idl: added getVar(s) methods.
+
+	* workben/external/lpsolve_uno/lpsolve_uno.?xx: added new variable to hold
+	decision variables locally, added getVar & getVars methods.
+
 2006-05-21  Kohei Yoshida  <kohei.yoshida@gmail.com>
 
 	* idl/org/openoffice/sc/solver/Equality.idl: removed '_THAN_' from two enum 
